navigation bar and text overflow fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 html{
   width: 100% !important;
-  font-size: 14px;
+  font-size: 15px;
  
   background-color: #e6e9eb;}
 body {
@@ -24,4 +24,10 @@ svg{
 a {
   text-decoration: none;
   color: black
+}
+
+@media  (max-width: 600px) {
+ html{
+    font-size:20px;
+  }
 }
